fix(collections): the `of` factories validated nothing, and a LinkedList list-iterator could not mutate
Retires docs/known-issues/netty/intobjecthashmaptest-discovery-sigsegv-20260814.md
and closes two of the three gaps the sublist-iterator page left open.

THE PAGE'S OWN CRASH was already fixed on dev and the page had gone stale.
Symbolising the fault pc named it in one step, which none of the four things
the page listed as "not yet done" would have:

  0x59c7b6fc8922 -> parking_lot::condvar::Condvar::notify_one_slow
                    <- cratonvm_vm::threading::monitor::Monitor::exit

A monitor freed under a thread that still held it — D3 of 6b21a496e
("prune_dead received PRE-SLIDE addresses ... a use-after-free reachable from
any synchronized block"). vm/src/threading/ is byte-identical between the
page's commit and dev, so nothing about Monitor changed; what changed is who
was releasing its mark-word reference.

  c017029b3 (the page's)   10 runs   4 SIGSEGV  4 hang   2 clean
  a3e5a0405 (fix's parent)  8 runs   4 SIGSEGV  0 hang   4 clean
  6b21a496e (the R6 audit) 10 runs   0          0       10 clean
  dev fd46ad2fd            28 runs   0          0       28 clean  (+10 GC-stress)

Every crash reproduced the page's signature bit for bit (r10=0xee5fffebdfffff00)
on a different binary at a different load address. RELOCATE=0 on the page's
binary is 5/5 clean, so compaction is the trigger and the class belongs to the
zgc-specific-sigsegv-cluster page. The page's "the rate moved within an hour on
a quiet box" is real and is not randomness: the rate tracks box load.

WHAT IS ACTUALLY FIXED HERE, all of it in native-collections:

  * List.of/Set.of/Map.of accepted null elements and duplicate keys, and
    List.copyOf(x) != x for an already-immutable x — 16 diverging lines to 0.
    Validating is the reason to write Set.of(...) instead of
    new HashSet<>(Arrays.asList(...)), so answering with a collection where the
    JDK throws turns a caught, located bug into 